# PolyTool

./: .gitignore  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/polytool_bot/: __init__.py  __main__.py  cli.py  config.py  state.py  worker.py
src/polytool_bot/api/: polymarket.py  polytool.py
src/polytool_bot/engine/: copytrade.py  executor.py  signer.py
