[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytool-bot"
version = "1.0.0"
description = "Open-source copy-trading bot for Polymarket, powered by PolyTool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PolyTool" },
]
keywords = ["polymarket", "copy-trading", "prediction-markets", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "py-clob-client>=0.19",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
polytool-bot = "polytool_bot.cli:cli"

[project.urls]
Homepage = "https://polytool.world"
Repository = "https://github.com/polytool/polytool-bot"

[tool.hatch.build.targets.wheel]
packages = ["src/polytool_bot"]
